# FitCart-AI

./: .editorconfig  .env.example  .gitignore  README.md  render.yaml
apps/: README.md
apps/ai/: .env.example  Dockerfile  README.md  pyproject.toml
apps/ai/app/: main.py
apps/ai/app/api/: router.py
apps/ai/app/api/v1/routes/: documents.py  health.py  nutrients.py  recommendations.py  reviews.py  semantic_search.py  vectors.py
apps/ai/app/core/: cache_keys.py  config.py
apps/ai/app/repositories/: response_cache_repository.py  vector_store_repository.py
apps/ai/app/schemas/: documents.py  nutrients.py  recommendations.py  reviews.py  vectors.py
apps/ai/app/services/: document_analysis_service.py  nutrient_service.py  recommendation_service.py  review_summary_service.py  semantic_search_service.py  vector_ingestion_service.py
apps/ai/fitcart_ai_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/ai/tests/: test_document_analysis.py  test_nutrient_explanation.py  test_review_summary.py  test_semantic_search.py  test_vector_ingestion.py
apps/api/: Dockerfile  README.md  pom.xml
apps/web/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
apps/web/src/: index.css  main.jsx  router.jsx
apps/web/src/pages/: HomePage.jsx  (+6 more)
docs/: README.md
docs/architecture/: README.md  ai-pipeline.md  system-overview.md
docs/learning/: README.md  monorepo-vs-polyrepo.md
docs/product/: README.md
docs/setup/: README.md  docker-local-development.md  local-development.md  render-deployment.md
infra/: README.md  docker-compose.yml
(+161 files in other folders)
