[project]
name = "fitcart-ai-service"
version = "0.1.0"
description = "FastAPI AI service for FitCart AI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "pydantic>=2.8.0,<3.0.0",
    "pydantic-settings>=2.4.0,<3.0.0",
    "redis>=5.0.0,<6.0.0",
    "pytest>=8.3.0,<9.0.0"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
